# Computer-System-Programming-ECE454

hw1/: Makefile  analyze.txt  diff.s  gmon.out  main.c.gcov  most_freq.txt  place.c.gcov  place.s  test_number_call.sh  try_swapg.s  try_swapo3asm.s  vpr  vpr-g  vpr-gcov  vpr-gprof  vpr-o2  (+1 more)
hw1 (original)/: Makefile  a.txt  gmon.out  place.c.gcov  place.s  vpr  vpr-o2gprof  vpr-os
hw2/ECE454-Lab2/: CMakeLists.txt  CMakeLists_gcov.txt  ECE454-Lab2.c  ECE454_Lab2  clock.c  clock.h  cmake_install.cmake  compile_commands.json  fcyc.h  implementation ( complicated memcpy version).c  implementation (1200000x).c  implementation (16000x).c  implementation (7000 tiling version).c  implementation (9000x).c  implementation (fake tiling version).c  implementation (final clean edit).c  implementation (final not pre pro not bug).c  implementation (final tiling 2000000x).c  implementation (precompute edition need to precompute index as well).c  implementation (submit verison 2).c  implementation (submit version 1).c  implementation (test for seg).c  implementation (version 3).c  implementation (version 4 2300x).c  implementation (version 5 6000x).c  implementation (version 6 6-8000x).c  implementation (version 7 8500x).c  implementation_b.c  implementation_cache.c  implementation_cache2.c  implementation_debug.c  implementation_failed.c  implementation_test 9000.c  implementation_test_frame 5 error.c  sensor_values.csv  utilities.c
hw2/ECE454-Lab2/nbproject/: configurations.xml  project.xml
hw2/ECE454-Lab2/nbproject/private/: Default.properties  configurations.xml  private.xml
(+127 files in other folders)
